Changed title, KEEMI in uppercase letters

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Keemi-Documentation</h1>
+        <h1>KEEMI-Documentation</h1>
         <h2>Documentation of the KEEMI file format  and other helpful informations for authors of KEEMI catalogs. Developers who want to adopt the KEEMI format in their App&#39;s find advices and additional informations.  </h2>
         <a href="https://github.com/PaaSQ/KeemiDocumentation" class="button"><small>View project on</small>GitHub</a>
       </div>
