Described the publishing process at GitHub

--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
+        <h2>What's that all about</h2>
+        <p>Get more information about the idea behind KEEMI <a href="http://www.keemimobile.com">here</a>.</p>
+        <h2>Publishing a KEEMI-Catalog at GitHub</h2>
+        <p>To publish an own KEEMI-Catalog at Github the following rules and conventions must be applied to the repository and its meta-data from GitHub e.g. the description.
+        <ol>
+        <li>Create a repository at GitHub. The name of the repository must begin with the prefix <u>Keemi</u> e.g. KeemiMyOwnCatalog.</li>
+        <li>Within the repository create a KEEMI-document in the KEEMI file format as described below. To simplify the creation of a KEEMI-Catalog there is a template (<a href="https://github.com/PaaSQ/KeemiCatalogTemplate/archive/master.zip">download</a>) which you can copy into your repository and use as a starting point.</li>
+        <li>Each KEEMI-Catalog needs a cover. Catalogs published at GitHub need a cover exactly named:<u>Cover.jpg</u> The Cover must be a JPEG with the extension .jpg</li>
+        <li>At GitHub.com use the description of the repository as the title for your catalog.</li>
+        <li>Last but not least, release a version of your catalog using the schema: major.minor e.g. 1.1 as tag-version.</li>
+        </ol>
+        </p>
           <h2>The KEEMI file format (Version 1.0)</h2>
           <h3>General</h3>
           <p>The KEEMI file format is an XML(Extensible Markup Language) compliant format to structure question driven learning / test documents. The format is similar to the export format used by the Learn Management System&nbsp;<a
@@ -265,6 +277,11 @@
           <a href="https://github.com/PaaSQ/KeemiDocumentation/tarball/gh-pages" class="button">
             <small>Download</small>
             .tar.gz file
+          </a>
+          
+           <a href="https://github.com/PaaSQ/KeemiCatalogTemplate/archive/master.zip" class="button">
+            <small>Download the Catalog-Template</small>
+            .zip file
           </a>
 
           <p class="repo-owner"><a href="https://github.com/PaaSQ/KeemiDocumentation"></a> is maintained by <a href="https://github.com/PaaSQ">PaaSQ</a>.</p>
